--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "date-fns": "^1.30.1",
     "events": "^3.1.0",
+    "expr-eval": "^2.0.2",
     "hooked-elements": "^1.0.1",
     "lit-html": "^1.2.1",
     "lodash": "^4.17.15",
