--- a/package.json
+++ b/package.json
@@ -17,18 +17,25 @@
     "events": "^3.1.0",
     "expr-eval": "^2.0.2",
     "hooked-elements": "^1.0.1",
+    "html2canvas": "^1.0.0-rc.5",
     "lit-html": "^1.2.1",
     "lodash": "^4.17.15",
+    "navigo": "^7.1.2",
+    "rasterizehtml": "^1.3.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-livereload": "^1.1.0",
+    "rollup-plugin-vue": "^5.1.6",
     "stats.js": "^0.17.0",
     "three": "^0.114.0",
-    "uhtml": "^1.8.1"
+    "uhtml": "^1.8.1",
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   },
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c -w",
     "dev": "npm-run-all --parallel start watch",
-    "start": "serve public",
+    "start": "open http://localhost:8080; serve public -s -p 8080; ",
     "github": "git add .; git commit -am \"github backup\"; git push -u origin master",
     "deploy": "npm run build; npm run netlify; npm run github; ",
     "netlify": "netlify deploy --dir=\"./public\" --prod"
