--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
   },
   "dependencies": {
     "date-fns": "^1.30.1",
-    "events": "^3.1.0",
     "expr-eval": "^2.0.2",
-    "hooked-elements": "^1.0.1",
-    "html2canvas": "^1.0.0-rc.5",
     "lit-html": "^1.2.1",
     "lodash": "^4.17.15",
     "navigo": "^7.1.2",
@@ -26,10 +23,7 @@
     "rollup-plugin-livereload": "^1.1.0",
     "rollup-plugin-vue": "^5.1.6",
     "stats.js": "^0.17.0",
-    "three": "^0.114.0",
-    "uhtml": "^1.8.1",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11"
+    "three": "^0.114.0"
   },
   "scripts": {
     "build": "rollup -c",
